--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
       "vite-plugin-vue-layouts/client"
     ],
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": ["src/*"],
+      "~/public": ["public/"],
+      "~/stores/*": ["src/stores/*"]
     }
   },
   "exclude": ["dist", "node_modules", "cypress"]
