--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,12 @@
     "types": [
       "vite/client",
       "vue/ref-macros",
-      "vite-plugin-pages/client",
-      "vite-plugin-vue-layouts/client"
+      "vite-plugin-pages/client"
     ],
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": ["src/*"],
+      "~/public": ["public/"],
+      "~/stores/*": ["src/stores/*"]
     }
   },
   "exclude": ["dist", "node_modules", "cypress"]
