--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "types": [
       "vite/client",
       "vue/ref-macros",
-      "vite-plugin-pages/client",
+      "vite-plugin-pages/client"
     ],
     "paths": {
       "~/*": ["src/*"],
